<resources>
    <string name="app_name">Develop-Meal</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="plan">Plan</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="register_now">New user? Register Now</string>
    <string name="alreadyHaveAccount">Already \nhave an \nAccount?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inspiration">Inspiration Meal</string>
    <string name="backup">BackUp your data</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="haveYourFirstStep">Here’s\nyour first\nstep with \nus! </string>
    <string name="register">Register</string>
    <string name="useOtherMethods">Use other Methods</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="category">"Category: "</string>
    <string name="country">"Country:  "</string>
    <string name="steps">"Steps"</string>
    <string name="addToPlan">Add To Plan</string>
    <string name="currentWeekPlan">Current Week Plan</string>

    <string name="search_by_ing">By Ingredients</string>
    <string name="search_recipe">Search Recipes</string>
    <string name="search_by_category">Categories</string>
    <string name="search_by_country">Countries</string>
    <string name="viewAll"><u>View All</u></string>
    <string name="category_name"><u>Category</u></string>
    <string name="ingredients_name">Ingredients</string>
    <string name="searchable_name">Searchable Name</string>
    <string name="searchable_meals">Searchable Meals</string>
    <string name="skip"><u>Skip</u></string>
    <string name="search_by">Search By</string>
    <string name="egyptian_meals">Egyptian Meals</string>

    <string name="OnBoardingTitle1">Inspiration Meal</string>
    <string name="OnBoarding1">Get a random meal for inspiration</string>

    <string name="OnBoardingTitle2">Filter Meals</string>
    <string name="OnBoarding2">Customize your food search according to your own special needs</string>

    <string name="OnBoardingTitle3">Perfect meal plan for you</string>
    <string name="OnBoarding3">Enjoy your personalized meal plan and delicious recipes</string>

</resources>