<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_24"
        android:enabled="true"
        android:title="@string/search" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:enabled="true"
        android:title="@string/favourite" />

    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/baseline_calendar_today_24"
        android:enabled="true"
        android:title="@string/plan" />
</menu>