<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="eg.gov.iti.jets.foodplanner.homeScreen.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="eg.gov.iti.jets.foodplanner.favorites.view.FavoritesFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/planFragment"
        android:name="eg.gov.iti.jets.foodplanner.plan.view.PlanFragment"
        android:label="@string/plan"
        tools:layout="@layout/fragment_plan" >
        <action
            android:id="@+id/action_planFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="eg.gov.iti.jets.foodplanner.search.view.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>