<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/search_search_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/daily_keisha"
                android:text="@string/search"
                android:textColor="@color/primaryOrange"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchFragment_searchView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/search_shape"
                android:elevation="30dp"
                app:defaultQueryHint="@string/search_recipe"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_search_textView" />

            <TextView
                android:id="@+id/search_searchByIng_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/daily_keisha"
                android:text="@string/search_by_ing"
                android:textColor="@color/primaryOrange"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_search_textView" />

<!--            <TextView-->
<!--                android:id="@+id/search_viewAll_textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/viewAll"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="15dp"-->
<!--                android:textStyle="bold|italic"-->
<!--                android:layout_marginEnd="15dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.093"-->
<!--                android:elevation="30dp"-->
<!--                app:layout_constraintTop_toTopOf="@id/search_searchByIng_textView" />-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_ing_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="30dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/search_searchByIng_textView"
                tools:itemCount="10"
                tools:listitem="@layout/ingrediants_item" />

            <TextView
                android:id="@+id/search_searchByCategory_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/daily_keisha"
                android:text="@string/search_by_category"
                android:textColor="@color/primaryOrange"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_ing_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_category_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:elevation="30dp"
                app:spanCount="2"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/search_searchByCategory_textView"
                tools:itemCount="10"
                tools:listitem="@layout/category_item" />

            <TextView
                android:id="@+id/search_searchByCountry_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/daily_keisha"
                android:text="@string/search_by_country"
                android:textColor="@color/primaryOrange"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_category_recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_country_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="30dp"
                app:spanCount="2"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/search_searchByCountry_textView"
                tools:itemCount="10"
                tools:listitem="@layout/category_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>