<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bk_color"
    tools:context=".ProfileActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageCardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="-30dp"
        android:backgroundTint="@color/white"
        android:elevation="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/develop_meal_logo2" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/userDataCardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:elevation="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCardView">
        <!--
                <TextView
                    android:id="@+id/profile_userName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/userName"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
           -->
        <TextView
            android:id="@+id/profile_email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_backup_button"
        style="@style/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="20dp"
        android:drawableLeft="@drawable/baseline_backup_24"
        android:drawableTint="@color/white"
        android:text="@string/backup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userDataCardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_logout_button"
        style="@style/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:drawableLeft="@drawable/baseline_logout_24"
        android:drawableTint="@color/white"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_backup_button" />
</androidx.constraintlayout.widget.ConstraintLayout>