<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.view.RegisterActivity"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/haveYourFirstStep"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/food4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        app:startIconDrawable="@drawable/ic_email_24"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/register_email_editText"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:backgroundTint="@color/whiteTextColor"
                            android:hint="@string/login_email_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_lock_24"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/register_password_editText"
                            style="@style/modifiedEditText"
                            android:maxLines="1"
                            android:backgroundTint="@color/whiteTextColor"
                            android:hint="Password"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        app:endIconMode="password_toggle"
                        style="@style/parent"
                        app:startIconDrawable="@drawable/ic_lock_24"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/register_confirmPassword_editText"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_confirm_password_hint"
                            android:maxLines="1"
                            android:backgroundTint="@color/whiteTextColor"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/register_register_btn"
                        android:text="@string/register"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:backgroundTint="@color/colorAccent"
                         android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"/>


                    <TextView
                        android:id="@+id/register_haveAccount_textView"
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:text="@string/haveAccount"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

<!--                <TextView-->
<!--                    style="@style/viewParent.headerText.NoMode"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/whiteTextColor"-->
<!--                    android:text="@string/useOtherMethods"-->
<!--                    android:layout_weight="6"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textAlignment="center"/>-->

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:id="@+id/register_anim_imageView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"/>


</RelativeLayout>